[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/circle.png" type="Texture" id=2]
[ext_resource path="res://scripts/player_box.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/hit.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/happy_hit2.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/heart.png" type="Texture" id=6]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.0705882, 0.360784, 0.780392, 1, 0.694118, 0.0705882, 0.0235294, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=5]
resource_name = "show_slow"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 0.241483, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="player_box" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -112.0
margin_right = 96.0
margin_bottom = 104.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="box" type="StaticBody2D" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="box"]
margin_left = -88.0
margin_top = 88.0
margin_right = 88.0
margin_bottom = 96.0
max_value = 50.0
value = 50.0
texture_progress = SubResource( 4 )
nine_patch_stretch = true

[node name="ColorRect" type="ColorRect" parent="box"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = 80.0
color = Color( 0.803922, 0.803922, 0.803922, 1 )

[node name="box_border" type="CollisionPolygon2D" parent="box"]
polygon = PoolVector2Array( 80, 80, 80, 96, -96, 96, -96, -96, 96, -96, 96, 96, 80, 96, 80, -80, -80, -80, -80, 80 )

[node name="Label" type="Label" parent="box"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -112.0
margin_right = 96.0
margin_bottom = -80.0
text = "ANXIETY SQUARE"
align = 1
valign = 1

[node name="heart" type="Sprite" parent="box"]
visible = false
position = Vector2( 84, 92 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="player" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="player"]
modulate = Color( 0.192157, 0.631373, 0.0901961, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="player"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player/Area2D"]
shape = SubResource( 1 )

[node name="bad_hit_sound" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 4 )

[node name="good_hit_sound" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 5 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/show_slow = SubResource( 5 )

[connection signal="area_entered" from="player/Area2D" to="." method="_on_Area2D_area_entered"]
